Fixed some spacing

--- a/assets/css/style.sass
+++ b/assets/css/style.sass
@@ -424,6 +424,7 @@ a
     top: 0
     bottom: 0
     text-align: center
+    padding-left: 0
 @media only screen and (min-device-width: 320px) and (max-device-width: 480px)
 
 @media only screen and (min-device-width: 768px) and (max-device-width: 1024px)
